Add operation in ALU along with its testbench.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 # macOS
 .DS_Store
 
-# rtl
+# build
 *.fs
 *.dbgmodule
 rtl/mc851.json
 rtl/mc851_pnr.json
 
-# Verilator
-obj_dir/
+# Verilog
+*.vvp
+*.vcd
